{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 29,
  "lineage": "474dde8c-81ee-8eb7-42d4-eab9a62c7ba0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-053c6984df34fb15f",
            "arn": "arn:aws:ec2:us-west-2:654654479205:elastic-ip/eipalloc-053c6984df34fb15f",
            "domain": "vpc",
            "id": "eipalloc-053c6984df34fb15f",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-80-170-5.us-west-2.compute.amazonaws.com",
            "public_ip": "35.80.170.5",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
          },
       {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f9de73d737e5908",
            "arn": "arn:aws:ec2:us-west-2:654654479205:elastic-ip/eipalloc-09f9de73d737e5908",
            "domain": "vpc",
            "id": "eipalloc-09f9de73d737e5908",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-233-67-152.us-west-2.compute.amazonaws.com",
            "public_ip": "44.233.67.152",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
       {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0398457afb04a7588",
            "arn": "arn:aws:ec2:us-west-2:654654479205:elastic-ip/eipalloc-0398457afb04a7588",
            "domain": "vpc",
            "id": "eipalloc-0398457afb04a7588",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-69-166-198.us-west-2.compute.amazonaws.com",
            "public_ip": "54.69.166.198",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
     {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654479205:internet-gateway/igw-094a02cece4465314",
            "id": "igw-094a02cece4465314",
            "owner_id": "654654479205",
            "vpc_id": "vpc-08ddc859c1005cf51"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
         {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-053c6984df34fb15f",
            "association_id": "eipassoc-0350991a673f585bf",
            "connectivity_type": "public",
            "id": "nat-0a9bfdf9af13f6843",
            "network_interface_id": "eni-082f67a6c797944fe",
            "private_ip": "10.0.0.208",
            "public_ip": "35.80.170.5",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04250c68ece537c7b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f9de73d737e5908",
            "association_id": "eipassoc-0229ed990104e59be",
            "connectivity_type": "public",
            "id": "nat-0fee2b5c466b2d050",
            "network_interface_id": "eni-0f5bbb1e461756466",
            "private_ip": "10.0.1.216",
            "public_ip": "44.233.67.152",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06c53d13b880420ef"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0398457afb04a7588",
            "association_id": "eipassoc-0f6c08261c30c19aa",
            "connectivity_type": "public",
            "id": "nat-0b5dc735785e85843",
            "network_interface_id": "eni-0065de1cccedfab28",
            "private_ip": "10.0.2.103",
            "public_ip": "54.69.166.198",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07b58a9a89a721aa8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
         {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-094a02cece4465314",
            "id": "r-rtb-033ee1027f4153ae31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-033ee1027f4153ae3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
     {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02d0d961cfeb599a21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a9bfdf9af13f6843",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d0d961cfeb599a2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
         {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d32a458c3f5c9c0e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fee2b5c466b2d050",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d32a458c3f5c9c0e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f7921118062f3b7a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b5dc735785e85843",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7921118062f3b7a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654479205:route-table/rtb-02d0d961cfeb599a2",
            "id": "rtb-02d0d961cfeb599a2",
            "owner_id": "654654479205",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ddc859c1005cf51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654479205:route-table/rtb-0d32a458c3f5c9c0e",
            "id": "rtb-0d32a458c3f5c9c0e",
            "owner_id": "654654479205",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ddc859c1005cf51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654479205:route-table/rtb-0f7921118062f3b7a",
            "id": "rtb-0f7921118062f3b7a",
            "owner_id": "654654479205",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ddc859c1005cf51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654479205:route-table/rtb-033ee1027f4153ae3",
            "id": "rtb-033ee1027f4153ae3",
            "owner_id": "654654479205",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ddc859c1005cf51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
         {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e2584263b877fc0",
            "route_table_id": "rtb-02d0d961cfeb599a2",
            "subnet_id": "subnet-01fbb18393f6e5962"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051eff34ed32982fd",
            "route_table_id": "rtb-0d32a458c3f5c9c0e",
            "subnet_id": "subnet-0fca4815422be9a93"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c156121b6ef4eb4",
            "route_table_id": "rtb-0f7921118062f3b7a",
            "subnet_id": "subnet-033d45d0588ec6024"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014c7dc24057ec6d7",
            "route_table_id": "rtb-033ee1027f4153ae3",
            "subnet_id": "subnet-04250c68ece537c7b"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055d427a6b0e58101",
            "route_table_id": "rtb-033ee1027f4153ae3",
            "subnet_id": "subnet-06c53d13b880420ef"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4c67ff1379581b6",
            "route_table_id": "rtb-033ee1027f4153ae3",
            "subnet_id": "subnet-07b58a9a89a721aa8"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
          {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654479205:subnet/subnet-01fbb18393f6e5962",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fbb18393f6e5962",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654479205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08ddc859c1005cf51"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
         {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654479205:subnet/subnet-0fca4815422be9a93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fca4815422be9a93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654479205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08ddc859c1005cf51"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654479205:subnet/subnet-033d45d0588ec6024",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033d45d0588ec6024",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654479205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08ddc859c1005cf51"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
     {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654479205:subnet/subnet-04250c68ece537c7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04250c68ece537c7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654479205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08ddc859c1005cf51"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654479205:subnet/subnet-06c53d13b880420ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c53d13b880420ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654479205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08ddc859c1005cf51"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654479205:subnet/subnet-07b58a9a89a721aa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b58a9a89a721aa8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654479205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08ddc859c1005cf51"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
     {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654479205:vpc/vpc-08ddc859c1005cf51",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b389922ed0cc73e2",
            "default_route_table_id": "rtb-0b91c9cf5e0f09156",
            "default_security_group_id": "sg-00ebc8506c220392d",
            "dhcp_options_id": "dopt-0f5a6f6ce67a611b0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ddc859c1005cf51",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b91c9cf5e0f09156",
            "owner_id": "654654479205"
          }
        }
      ]
    }
  ]
}